# weaviate-migration

./: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
config/: env.example
docs/: GCS_MIGRATION_README.md  QUICKSTART_GCS.md  QUICKSTART_v1.md  README_v1.md  WEAVIATE_V3_SETUP.md
examples-v1/: advanced_migration.py  simple_migration.py
examples-v2/: gcs_migration_example.py
migration-v1/: CONCURRENT_MIGRATION_README.md  LOAD_COLLECTIONS_README.md  QUICK_LOAD_GUIDE.md  README.md  README_OPTIMIZED.md  REPORTING_README.md  create_sample_update_report.py  env.example  example_load_collections.py  generate_update_report.py  load_collections.py  migrate.py  run_migration.py  test_connections.py  test_load_collections.py  test_verify_migration.py  update_pg_datasets.py
migration-v1/src/: __init__.py  config.py  data_transformer.py  report_generator.py  update_report_generator.py  utils.py  weaviate_to_zilliz_migrator.py
migration-v2-gcs/: README.md  env.example  migrate_v2_gcs.py
scripts/: cleanup.py  create_sample_data.py  data_visualizer.py  main.py  setup.py
scripts/results/: timing_report_20250801_104143.html  timing_test_results.csv
